# clonenetflix

./: .gitignore  Dockerfile  Makefile  db.sqlite3  docker-compose.yml  pyproject.toml
core/: settings.py  urls.py
movie/: urls.py  views.py
netflixapp/: admin.py  choices.py  forms.py  models.py  urls.py  views.py
netflixapp/migrations/: 0001_initial.py  0002_movie_description_alter_movie_age_limit_and_more.py  0002_remove_movie_genre.py  0003_alter_movie_description.py  0003_rename_genretwo_movie_genre.py  0004_alter_movie_description.py  0004_profile_is_manager.py  0005_alter_movie_description.py  0005_remove_profile_is_manager.py  0006_alter_movie_age_limit_alter_profile_age_limit_and_more.py  0007_delete_customuser.py  0008_customuser.py
static/css/: lupa.css  style.css
templates/: base.html  index.html
templates/account/: login.html  logout.html  signup.html
templates/interface/: animations.html  index.html  movies.html  my_list.html  series.html
templates/movies/: moviedetail.html  movielist.html  playmovie.html
templates/profile/: editprofile.html  manageprofile.html  profilecreate.html  profilelist.html
user/: models.py
user/migrations/: 0001_initial.py  0002_alter_customuser_managers_customuser_date_joined_and_more.py  0003_customuser_is_staff_customuser_is_superuser.py  0004_customuser_groups_customuser_profiles_and_more.py
